# fifteen-rs

./: .gitignore  Cargo.toml  README.md  u64-convert.py
solver/: Cargo.toml
solver/src/: lib.rs  puzzle15.rs
src/: main.rs
src/puzzlesolver/: mod.rs
