[package]
name = "fifteen-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
once_cell = { version = "1.18.0", features = [] }
rand = { version = "0.8.5", features = [] }
log = "0.4.20"
